--- a/inst/htmlwidgets/lib/vkbeautify/wdgt.css
+++ b/inst/htmlwidgets/lib/vkbeautify/wdgt.css
@@ -3,8 +3,12 @@ button:active {
   text-shadow: 0 -1px 0 #444, 0 0 5px #ffd, 0 0 8px #fff;
   box-shadow: 0 1px 0 #666, 0 2px 0 #444, 0 2px 2px rgba(0,0,0,0.9);
   -webkit-transform: translateY(3px);
+  -moz-transform: translateY(3px);
+  -ms-transform: translateY(3px);
+  -o-transform: translateY(3px);
   transform: translateY(3px);
   -webkit-animation: none;
+  -moz-animation: none;
   animation: none;
 }
 
@@ -26,11 +30,11 @@ button:active {
   width:100%;
   font-family:monospace;
   display:none;
-  border: 1px solid;
+  border: 1px solid #2b2b2b;
   margin:0;
   margin-top:5px;
   padding:5px;
-  color: #000000;
+  color: #2b2b2b;
   background-color: #ffffff;
 }
 
@@ -38,6 +42,7 @@ button:active {
   width:100%;
   max-width:100%;
   height:30px;
+  padding-bottom:5px;
 }
 
 .xpathspan {
@@ -45,9 +50,12 @@ button:active {
   font-weight:bold
 }
 
+.filterdiv {
+  clear:both;
+}
+
 .filterinput {
   font-family: monospace;
-  outline: none;
 }
 
 .resetclass {
@@ -56,7 +64,6 @@ button:active {
   height:26px;
   width:26px;
   border: none;
-  outline:0;
   background-color:#ffffff;
   background-image: url(reset.png);
   background-repeat: no-repeat;
@@ -68,7 +75,7 @@ button:active {
   height:26px;
   width:26px;
   border: none;
-  outline:0; background-color:#ffffff;
+  background-color:#ffffff;
   background-image: url(rlogo.png);
   background-repeat: no-repeat;
 }
